# jsonny

./: .gitignore  CMakeLists.txt  LICENSE
include/: jsonny.hpp
src/: document.cpp  jsonny.cpp  lexer.cpp  lexer.hpp
tests/: CMakeLists.txt  main.cpp
